--- a/index.html
+++ b/index.html
@@ -3,179 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UTeach Hero</title>
-  <!-- Tailwind CSS CDN -->
+  <title>UTeachHero</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen bg-gray-50 relative overflow-hidden">
-
-  <!-- Background decorative elements -->
-  <div class="absolute inset-0">
-    <div class="absolute top-20 left-20 w-2 h-2 bg-blue-400 rounded-full"></div>
-    <div class="absolute top-32 right-40 w-3 h-3 bg-purple-400 rounded-full"></div>
-    <div class="absolute top-40 left-1/4 text-orange-400 text-2xl">+</div>
-    <div class="absolute top-60 right-1/3 w-2 h-2 bg-gray-400 rounded-full"></div>
-    <div class="absolute bottom-40 left-32 text-blue-400 text-xl">✦</div>
-    <div class="absolute top-1/3 right-20 text-gray-400 text-3xl">×</div>
-    <div class="absolute bottom-1/3 left-10 w-1.5 h-1.5 bg-orange-400 rounded-full"></div>
-    <div class="absolute top-16 left-1/3 w-2 h-2 bg-green-400 rounded-full"></div>
-    <div class="absolute bottom-1/2 right-1/4 text-purple-400 text-2xl">✦</div>
-    <div class="absolute top-1/2 left-16 text-orange-400 text-sm">●</div>
-    <div class="absolute bottom-32 right-32 w-1.5 h-1.5 bg-blue-300 rounded-full"></div>
-    <div class="absolute top-24 right-1/2 text-gray-300 text-lg">+</div>
-    <div class="absolute bottom-20 left-1/2 w-2 h-2 bg-purple-300 rounded-full"></div>
-    <div class="absolute top-3/4 right-40 text-orange-300 text-xl">×</div>
-    <div class="absolute top-40 left-10 w-1 h-1 bg-yellow-400 rounded-full"></div>
-    <div class="absolute top-10 right-1/4 w-1.5 h-1.5 bg-pink-400 rounded-full"></div>
-    <div class="absolute bottom-1/4 left-1/3 text-blue-300 text-sm">✦</div>
-    <div class="absolute top-2/3 right-10 w-2 h-2 bg-orange-300 rounded-full"></div>
-    <div class="absolute bottom-16 left-20 text-purple-300 text-xl">+</div>
-    <div class="absolute top-1/4 left-1/2 w-1.5 h-1.5 bg-gray-300 rounded-full"></div>
-    <div class="absolute bottom-20 left-0 w-48 h-48 bg-yellow-400 rounded-full transform -translate-x-1/2"></div>
-    <div class="absolute top-1/2 right-0 w-64 h-96 bg-yellow-400 rounded-full transform translate-x-1/3"></div>
-  </div>
-
-  <!-- Header -->
-  <header class="relative z-10 bg-white shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between h-16">
-        <!-- Logo -->
-        <div class="flex items-center">
-          <span class="text-2xl font-bold">
-            <span class="text-orange-500">u</span>
-            <span class="text-gray-900">teach</span>
-          </span>
-        </div>
-
-        <!-- Navigation -->
-        <nav class="hidden md:flex items-center space-x-8">
-          <a href="#" class="text-gray-700 hover:text-gray-900 font-medium">Products</a>
-          <a href="#" class="text-gray-700 hover:text-gray-900 font-medium">Solutions</a>
-          <a href="#" class="text-gray-700 hover:text-gray-900 font-medium">Pricing</a>
-          <div class="relative group">
-            <button class="flex items-center text-gray-700 hover:text-gray-900 font-medium">
-              Resources
-              <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-              </svg>
-            </button>
-          </div>
-        </nav>
-
-        <!-- Auth buttons -->
-        <div class="flex items-center space-x-4">
-          <button class="text-gray-700 hover:text-gray-900 font-medium">Log In</button>
-          <button class="px-6 py-2 bg-white border-2 border-gray-900 text-gray-900 rounded-lg font-medium hover:bg-gray-50 transition-colors">
-            Sign Up Now
-          </button>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main class="relative z-10 max-w-6xl mx-auto px-4 pt-20 pb-32">
-    <!-- Headline -->
-    <div class="text-center mb-4">
-      <h1 class="text-5xl font-bold text-gray-900">
-        All the 
-        <span class="relative">
-          tools
-          <span class="absolute bottom-0 left-0 w-full h-3 bg-orange-400 -z-10 transform translate-y-1"></span>
-        </span>
-        that you need
+<body class="bg-white text-gray-900 overflow-y-auto">
+  <section class="relative w-full flex flex-col md:flex-row items-center justify-between px-6 py-12 md:py-24 lg:px-16 space-y-8 md:space-y-0">
+    <!-- Left side -->
+    <div class="flex-1 max-w-xl text-center md:text-left">
+      <h1 class="text-4xl md:text-5xl font-bold mb-6">
+        Transform Your Teaching with
+        <span class="text-blue-600">UTeachHero</span>
       </h1>
-    </div>
-
-    <!-- Subheadline -->
-    <div class="text-center mb-16 max-w-3xl mx-auto">
-      <p class="text-lg text-gray-600 mb-2">
-        Sit elit feugiat turpis sed integer integer accumsan turpis. Sed suspendisse nec lorem mauris.
+      <p class="text-lg md:text-xl text-gray-600 mb-8">
+        The all-in-one platform designed to help educators streamline lesson planning,
+        engage students, and save time. Elevate your teaching experience today.
       </p>
-      <p class="text-lg text-gray-600">
-        Pharetra, eu imperdiet ipsum ultrices amet, dui sit suspendisse.
-      </p>
-    </div>
-
-    <!-- Browser Mockup -->
-    <div class="relative max-w-4xl mx-auto">
-      <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
-        <!-- Browser Chrome -->
-        <div class="bg-gray-100 px-4 py-3 flex items-center">
-          <div class="flex space-x-2">
-            <div class="w-3 h-3 bg-red-400 rounded-full"></div>
-            <div class="w-3 h-3 bg-yellow-400 rounded-full"></div>
-            <div class="w-3 h-3 bg-green-400 rounded-full"></div>
-          </div>
-          <div class="flex-1 mx-4">
-            <div class="bg-white rounded-md px-4 py-1 text-center text-gray-400 text-sm">
-              uteach.com
-            </div>
-          </div>
-          <div class="flex space-x-2">
-            <button class="text-gray-400 hover:text-gray-600">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-              </svg>
-            </button>
-            <button class="text-gray-400 hover:text-gray-600">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-              </svg>
-            </button>
-          </div>
-        </div>
-        <!-- Browser Content - Gradient -->
-        <div class="relative h-96 bg-gradient-to-br from-blue-200 via-purple-200 to-pink-200"></div>
-      </div>
-
-      <!-- Tool Icons -->
-      <div class="flex justify-center items-center space-x-4 mt-8">
-        <div class="w-12 h-12 bg-green-500 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 3L1 9l4 2.18v6L12 21l7-3.82v-6l2-1.09V17h2V9L12 3zm6.82 6L12 12.72 5.18 9 12 5.28 18.82 9zM17 15.99l-5 2.73-5-2.73v-3.72L12 15l5-2.73v3.72z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-white border-2 border-orange-400 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8" viewBox="0 0 24 24">
-            <path fill="#FFC107" d="M7.71 3.5L1.15 15l3.46 6l6.56-11.5L7.71 3.5z"/>
-            <path fill="#1976D2" d="M15.88 21H1.15l3.46-6h14.73L15.88 21z"/>
-            <path fill="#4CAF50" d="M7.71 3.5h8.17l6.97 11.5h-8.17L7.71 3.5z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center shadow-md">
-          <div class="text-blue-600 font-bold text-xl">G</div>
-        </div>
-        <div class="w-12 h-12 bg-gray-800 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 15.5A3.5 3.5 0 0 1 8.5 12A3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5a3.5 3.5 0 0 1-3.5 3.5m7-3.5c0 1.86-.64 3.58-1.71 4.93l2.48 2.48c.39.39.39 1.02 0 1.41s-1.02.39-1.41 0l-2.48-2.48A6.932 6.932 0 0 1 12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7s7 3.13 7 7z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-white border-2 border-gray-300 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-red-500" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-blue-500 rounded-lg flex items-center justify-center shadow-md">
-          <div class="text-white font-bold text-lg">31</div>
-        </div>
-        <div class="w-12 h-12 bg-pink-500 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 3c5.514 0 10 3.592 10 8.007c0 4.414-4.486 8.007-10 8.007c-1.393 0-2.721-.236-3.926-.655c-.467.33-1.428.934-2.92 1.807c.307-.76.573-1.696.747-2.741C3.398 15.96 2 13.657 2 11.007C2 6.592 6.486 3 12 3z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-cyan-500 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M1 9l2 2c4.97-4.97 13.03-4.97 18 0l2-2C16.93 2.93 7.08 2.93 1 9zm8 8l3 3l3-3c-1.65-1.66-4.34-1.66-6 0zm-4-4l2 2c2.76-2.76 7.24-2.76 10 0l2-2C15.14 9.14 8.87 9.14 5 13z"/>
-          </svg>
-        </div>
-        <div class="w-12 h-12 bg-orange-400 rounded-lg flex items-center justify-center shadow-md">
-          <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M5 8c-1.11 0-2 .89-2 2v4c0 1.11.89 2 2 2h2c.55 0 1.05-.22 1.41-.59L10 13.83l1.59 1.58c.36.37.86.59 1.41.59h2c1.11 0 2-.89 2-2v-4c0-1.11-.89-2-2-2H5zm2.5 6c-.83 0-1.5-.67-1.5-1.5S6.67 11 7.5 11S9 11.67 9 12.5S8.33 14 7.5 14zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5s1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"/>
-          </svg>
-        </div>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
+        <a href="#"
+           class="px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition">
+          Get Started
+        </a>
+        <a href="#"
+           class="px-6 py-3 bg-gray-100 text-gray-800 rounded-lg shadow hover:bg-gray-200 transition">
+          Learn More
+        </a>
       </div>
     </div>
-  </main>
+
+    <!-- Right side -->
+    <div class="flex-1 flex justify-center">
+      <img
+        src="https://via.placeholder.com/500x400"
+        alt="UTeachHero preview"
+        class="max-w-full h-auto rounded-lg shadow-lg"
+      />
+    </div>
+  </section>
 </body>
 </html>
