--- a/index.html
+++ b/index.html
@@ -202,5 +202,15 @@
       </div>
     </div>
   </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script>
+  const { createClient } = supabase;
+  const supabaseClient = createClient(
+    "https://sursennpdzqvdxfajzdt.supabase.co", // 🔑 your project URL
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN1cnNlbm5wZHpxdmR4ZmFqemR0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3MzI0ODYsImV4cCI6MjA3NDMwODQ4Nn0.85XSNF48z2oIf8POVpfcGNbNtFzzSF5qGjR5iMA-Hn0"                     // 🔑 your anon key
+  );
+</script>
+
 </body>
 </html>
