--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
 
         <!-- Auth buttons -->
         <div class="flex items-center space-x-4">
-          <button class="text-gray-700 hover:text-gray-900 font-medium">
-            Log In
-          </button>
-          <button class="px-6 py-2 bg-white border-2 border-gray-900 text-gray-900 rounded-lg font-medium hover:bg-gray-50 transition-colors">
-            Sign Up Now
-          </button>
-        </div>
+  <a href="login.html" class="text-gray-700 hover:text-gray-900 font-medium">
+    Log In
+  </a>
+  <a href="register.html" class="px-6 py-2 bg-white border-2 border-gray-900 text-gray-900 rounded-lg font-medium hover:bg-gray-50 transition-colors">
+    Sign Up Now
+  </a>
+</div>
+
       </div>
     </div>
   </header>
@@ -203,14 +204,7 @@
     </div>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script>
-  const { createClient } = supabase;
-  const supabaseClient = createClient(
-    "https://sursennpdzqvdxfajzdt.supabase.co", // 🔑 your project URL
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN1cnNlbm5wZHpxdmR4ZmFqemR0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3MzI0ODYsImV4cCI6MjA3NDMwODQ4Nn0.85XSNF48z2oIf8POVpfcGNbNtFzzSF5qGjR5iMA-Hn0"                     // 🔑 your anon key
-  );
-</script>
+  <script src="js/supabase.js"></script>
 
 </body>
 </html>
