--- a/register.html
+++ b/register.html
@@ -13,7 +13,9 @@
   <p id="status"></p>
   <a href="login.html">Already have an account? Log in</a>
 
-  <script src="js/supabase.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="js/supabase.js"></script>
+
   <script>
     async function register() {
       const email = document.getElementById("email").value;
