--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@
   <p id="status"></p>
   <a href="register.html">Don’t have an account? Register</a>
 
-  <script src="js/supabase.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="js/supabase.js"></script>
+
   <script>
     async function login() {
       const email = document.getElementById("email").value;
