--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,9 @@
   </div>
   <button onclick="logout()">Logout</button>
 
-  <script src="js/supabase.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="js/supabase.js"></script>
+
   <script>
     async function checkUser() {
       const { data, error } = await supabaseClient.auth.getUser();
