--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,13 @@
     <div>Module 1: ✅ Free</div>
     <div>Module 2: 🔒 Locked</div>
     <div>Module 3: 🔒 Locked</div>
+    
   </div>
+
+  <a href="payment.html" class="px-6 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">
+  Upgrade to Full Course
+</a>
+
   <button onclick="logout()">Logout</button>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
