--- a/dashboard.html
+++ b/dashboard.html
@@ -6,27 +6,50 @@
 </head>
 <body>
   <h1>Welcome to your dashboard!</h1>
+
   <div id="modules">
-    <div>Module 1: ✅ Free</div>
-    <div>Module 2: 🔒 Locked</div>
-    <div>Module 3: 🔒 Locked</div>
-    
+    <div><a href="module1.html">Module 1: ✅ Free</a></div>
+    <div id="module2">Module 2: 🔒 Locked</div>
+    <div id="module3">Module 3: 🔒 Locked</div>
   </div>
 
-  <a href="payment.html" class="px-6 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">
-  Upgrade to Full Course
-</a>
+  <a id="upgradeBtn" href="payment.html" 
+     class="px-6 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">
+    Upgrade to Full Course
+  </a>
 
   <button onclick="logout()">Logout</button>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script src="js/supabase.js"></script>
+  <script src="js/supabase.js"></script>
 
   <script>
     async function checkUser() {
       const { data, error } = await supabaseClient.auth.getUser();
       if (!data.user) {
-        window.location.href = "login.html"; // redirect if not logged in
+        window.location.href = "login.html"; 
+        return;
+      }
+
+      // fetch profile info
+      const { data: profile, error: profileError } = await supabaseClient
+        .from("profiles")
+        .select("paid")
+        .eq("id", data.user.id)
+        .single();
+
+      if (profileError) {
+        console.error("Error fetching profile:", profileError);
+        return;
+      }
+
+      if (profile.paid) {
+        // unlock modules and make them links
+        document.getElementById("module2").innerHTML = `<a href="module2.html">Module 2: ✅ Unlocked</a>`;
+        document.getElementById("module3").innerHTML = `<a href="module3.html">Module 3: ✅ Unlocked</a>`;
+
+        // hide upgrade button
+        document.getElementById("upgradeBtn").style.display = "none";
       }
     }
 
